test/invalid/delimiter_string_unstarted.d
//T error: delimiter_string_unstarted.d:4:9:
//T error: Identifier must be followed by a line break.

enum s = q"FOO.BAR FOO.BAR ";
